@@ -65,7 +65,21 @@ those who either can't or don't feel like installing it.</p>
 <p id="emailaddy">It is authored by Michael Pyne (mpyne (AT) grammarian (DOT) homelinux 
 (DOT) net), and is one of several build scripts for this purpose.</p>
 
-<p><b>2004-Aug-02:</b> v0.81<br/>
+<p><b>2004-Aug-03:</b> v0.81<br/>
+New features:
+<ul>
+<li>New quick-config-generators to help you quickly generate a bare, but
+working configuration.  There is an <a
+href="/cgi-bin/kdecvs-build-wizard">online wizard</a>, and the source tarball
+includes a <a
+href="http://www.riverbankcomputing.co.uk/pyqt/index.php">PyQt</a>-based
+program called <b>kdecvs-pywizard</b>.  PyQt will also be included in the
+kdebindings modules of the upcoming KDE 3.3.  Note that both programs, and in
+particular kdecvs-pywizard, still need work, but they should be useful for
+generating a shell configuration file for new users to tweak.</li>
+<li>Add a warning if you're using qt-copy but <a href="#conf-qtdir">qtdir</a>
+is set incorrectly.</li>
+</ul>
 Bugfixes:
 <ul>
 <li>Fixed <a href="#conf-use-qt-builddir-hack">use-qt-builddir-hack</a> to
@@ -144,29 +158,6 @@ around after piping the output into less.</li>
 <li>Silence warnings when the script informs you that you need to create a
 .kdecvs-buildrc by using the correct exit function.</li>
 <li>Try to build modules even if one of the updates happened to fail.</li>
-</ul>
-</p>
-
-<p><b>2004-Jun-21:</b> v0.74<br/>
-New features:
-<ul>
-<li>When a package fails to build, the script will give the file name of the
-appropriate log file in the summary.  Some errors don't leave a log file.
-Hopefully later I'll have every error condition reported in the summary as
-well.</li>
-<li>Based on advice from Amilcar Lucas, the build system will automatically
-refresh (without scrapping the builddir) if the CVS update for a module
-detects an added Makefile.am.  This is hard to test, so I'd appreciate any
-reports on how well this is working.</li>
-</ul>
-
-Bugfixes:
-<ul>
-<li>The <a href="#cmdline-help">-h</a> option no longer prints annoying
-warnings.  Thanks to Kurt V.  Hindenburg for the patch.</li>
-<li>The <a href="#cmdline-install">--install</a> option was similarly
-afflicted.  It has also been fixed.  As of this release, the file
-successfully-build is no longer created.</li>
 </ul>
 </p>
 
@@ -829,7 +820,7 @@ href="#options">.kdecvs-buildrc options</a>.
 <div align="center" class="thankyou">
 <font size="-1"><a href="http://www.cvsup.org/">CVSup</a> is a registered trademark of John D. Polstra.
 <br/>
-Last modified: Mon Aug  2 03:45:43 2004</font>
+Last modified: Tue Aug  3 21:27:04 2004</font>
 </div>
 </body>
 </html>
