@@ -1,5 +1,6 @@
 Version history: 0.81
  * Fix use-qt-builddir-hack to work on the second and subsequent runs.
+ * Add a warning if you're using qt-copy but qtdir isn't set to use qt-copy
 
 Version history: 0.80
  * Fixed an output quibble discovered by Michal Rokos
